--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@
 version: 2.1
 
 # orbs: 
-#   browser-tools: circleci/browser-tools@1.4.4
 orbs:
+  browser-tools: circleci/browser-tools@1.4.4
   aws-cli: circleci/aws-cli@4.0.0 # use v4 of this orb
   aws-ecr: circleci/aws-ecr@8.2.1 # this orb doesn't support OIDC v2, so we use aws-cli to authenticate
 
@@ -41,13 +41,13 @@ jobs:
     resource_class: medium+
     steps:
       - run: sudo apt-get update
-      # - browser-tools/install-browser-tools:
-      #     chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
-      #     # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
-      # - run:
-      #     name: Remove chromedriver license # prevents checkout
-      #     command: |
-      #       rm LICENSE.chromedriver
+      - browser-tools/install-browser-tools:
+          chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
+          # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+      - run:
+          name: Remove chromedriver license # prevents checkout
+          command: |
+            rm LICENSE.chromedriver
       - checkout
 
       # Download and cache dependencies
@@ -220,7 +220,6 @@ jobs:
       - run: |
           aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
       # Build and push your Docker image
-
       - run:
           name: promote staging image to production
           command: |
@@ -237,16 +236,6 @@ workflows:
     jobs:
       - test
       ### staging ###
-
-      # PREVIOUS
-      # - build_image:
-      #     name: build-staging
-      #     env_name: staging
-      #     requires:
-      #       - test
-      #     filters:
-      #       branches:
-      #         only: master
       - build_and_push_image:
           name: build-staging
           requires:
@@ -273,16 +262,3 @@ workflows:
           env_name: production
           requires:
             - tag_production
-
-#  smoke-tests:
-#    jobs:
-#      - test:
-#          name: smoke-tests
-#          test_command: bundle exec cucumber -p smoke
-#    triggers:
-#      - schedule:
-#          cron: "0 6 * * *"
-#          filters:
-#            branches:
-#              only:
-#                - master
