RST-5654 Content change for HWF down (#1524)
* RST-5654 Content change for HWF down

* RST-5654 Change chrome-version

* RST-5654 Change replace chrome-version

* RST-5654 Change chrome-version

* RST-5654 Change chrome-version

* RST-5654 Remove replace-existing

* RST-5654 Use license

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,13 @@ jobs:
     resource_class: medium+
     steps:
       - run: sudo apt-get update
-      - browser-tools/install-browser-tools:
+      - browser-tools/install-chrome:
           chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
-          # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
-      - run:
-          name: Remove chromedriver license # prevents checkout
-          command: |
-            rm LICENSE.chromedriver
+#          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+#      - run:
+#          name: Remove chromedriver license # prevents checkout
+#          command: |
+#            rm LICENSE.chromedriver
       - checkout
 
       # Download and cache dependencies
