add to env example (#1527)

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ SKIP_VIRUS_CHECK=true
 
 AWS_S3_REGION: add_me
 AWS_S3_BUCKET: add_me
+
+IS_DOCKER=true
+AWS_ROLE_ARN=ask-a-team-mate
+AWS_WEB_IDENTITY_TOKEN_FILE=ask-a-team-mate
