RST-6378 Implement PLR

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,5 @@ AWS_S3_BUCKET: add_me
 IS_DOCKER=true
 AWS_ROLE_ARN=ask-a-team-mate
 AWS_WEB_IDENTITY_TOKEN_FILE=ask-a-team-mate
+
+OPENING_CHANGE=false
