RST-6378 Change method name to PRLChange

--- a/.env.example
+++ b/.env.example
@@ -47,4 +47,4 @@ IS_DOCKER=true
 AWS_ROLE_ARN=ask-a-team-mate
 AWS_WEB_IDENTITY_TOKEN_FILE=ask-a-team-mate
 
-OPENING_CHANGE=false
+PRL_OPENING=false
