--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - browser-tools/install-chrome:
           chrome-version: 123.0.6312.105
 #          chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
-#          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
 #      - run:
 #          name: Remove chromedriver license # prevents checkout
 #          command: |
