--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,8 @@ jobs:
     steps:
       - run: sudo apt-get update
       - browser-tools/install-chrome:
-          chrome-version: 112.0.5615.49
-#          chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
-          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+          chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
+#          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
 #      - run:
 #          name: Remove chromedriver license # prevents checkout
 #          command: |
