run schema:load

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,9 @@ jobs:
           key: v1.1-dependencies-{{ checksum "Gemfile.lock" }}
 
       # Database setup
-      # - run: bundle exec rake db:create
-      # - run: bundle exec rake db:schema:load
-      - run: bundle exec rake db:migrate
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+#      - run: bundle exec rake db:migrate
 
       # so mutant only runs on modified files; refer to mutant.rake for more details
       - run: git remote set-branches origin master && git fetch
