--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
       #   name: run tests
       #   command: << parameters.test_command >>
     
-  build_and_push_image:
+  build_and_push_image_setup:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     steps:
       # Checkout your repository
@@ -97,8 +97,7 @@ jobs:
           tag: ${CIRCLE_SHA1}
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
-
-  build_image:
+  build_and_push_image:
     <<: *cloud_container
     parameters:
       env_name:
@@ -236,10 +235,20 @@ workflows:
     jobs:
       - test
       ### staging ###
-      - build_and_push_image:
-          name: build-staging
+      - build_and_push_image_setup:
+          name: build-staging-setup
           requires:
             - test
+          filters:
+            branches:
+              only:
+                - /^master$/
+                - /^RST-.*/
+      - build_and_push_image:
+          name: build-staging
+          env_name: staging
+          requires:
+            - build-staging-setup
           filters:
             branches:
               only:
