--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
       # Build and push your Docker image
       - aws-ecr/build-image:
           push-image: true
-          tag: ${CIRCLE_SHA1},latest
+          tag: ${CIRCLE_SHA1},staging.latest
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
   deploy_image_to_live:
