--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,8 @@ jobs:
     
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    env_name:
+      type: string
     steps:
       # Checkout your repository
       - checkout
@@ -94,7 +96,7 @@ jobs:
       # Build and push your Docker image
       - aws-ecr/build-image:
           push-image: true
-          tag: ${CIRCLE_SHA1}
+          tag: ${CIRCLE_SHA1},<< parameters.env_name >>.latest
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
 
@@ -238,27 +240,44 @@ workflows:
       ### staging ###
       - build_and_push_image:
           name: build-staging
+          env_name: staging
           requires:
             - test
           filters:
             branches:
-              only: master
+              only:
+                - /^master$/
+                - /^RST-.*/
       - deploy_image_to_live:
           name: deploy-staging-live
           env_name: staging
           requires:
             - build-staging
+          filters:
+            branches:
+              only:
+                - /^master$/
+                - /^RST-.*/
       ### production ###
       - approve_production:
           type: approval
           requires:
             - deploy-staging-live
+          filters:
+            branches:
+              only: master
       - tag_production:
           env_name: staging
           requires:
             - approve_production
+          filters:
+            branches:
+              only: master
       - deploy_image_to_live_prod:
           name: deploy-production-live
           env_name: production
           requires:
             - tag_production
+          filters:
+            branches:
+              only: master
