--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,8 +81,6 @@ jobs:
     
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
-    env_name:
-      type: string
     steps:
       # Checkout your repository
       - checkout
@@ -96,10 +94,9 @@ jobs:
       # Build and push your Docker image
       - aws-ecr/build-image:
           push-image: true
-          tag: ${CIRCLE_SHA1},<< parameters.env_name >>.latest
+          tag: ${CIRCLE_SHA1},staging.latest
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
-
   build_image:
     <<: *cloud_container
     parameters:
@@ -240,7 +237,6 @@ workflows:
       ### staging ###
       - build_and_push_image:
           name: build-staging
-          env_name: staging
           requires:
             - test
           filters:
