--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,12 +42,15 @@ jobs:
     steps:
       - run: sudo apt-get update
       - browser-tools/install-chrome:
-          chrome-version: 128.0.6613.114 # TODO: remove when chromedriver downloads are fixed
-#          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
-#      - run:
-#          name: Remove chromedriver license # prevents checkout
-#          command: |
-#            rm LICENSE.chromedriver
+          chrome-version: 128.0.6613.114
+      - run:
+          name: Install ChromeDriver
+          command: |
+            CHROME_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+            wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+            unzip chromedriver_linux64.zip
+            sudo mv chromedriver /usr/local/bin/
+            sudo chmod +x /usr/local/bin/chromedriver
       - checkout
 
       # Download and cache dependencies
