Install Chromedriver version 126

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           name: Install ChromeDriver
           command: |
             wget https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.127/linux64/chromedriver-linux64.zip
-            unzip chromedriver_linux64.zip
+            unzip chromedriver-linux64.zip
             sudo mv chromedriver /usr/local/bin/
             sudo chmod +x /usr/local/bin/chromedriver
 
