Install Chromedriver version 126

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           command: |
             wget https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.127/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
-            sudo mv chromedriver /usr/local/bin/
+            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
             sudo chmod +x /usr/local/bin/chromedriver
 
       # Download and cache dependencies
