Testing different Chrome + Chromedriver versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,8 @@ jobs:
           name: Install ChromeDriver
           command: |
             sudo apt-get remove google-chrome-stable
-            wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chrome-linux64.zip
-            unzip chrome-linux64.zip
-            sudo chmod +x chrome-linux64/chrome
-            sudo mv chrome-linux64/chrome /usr/local/bin/
+            sudo apt-get install google-chrome-stable
+            
             wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
             sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
