--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,15 @@ jobs:
           name: Install ChromeDriver
           command: |
             sudo apt-get remove google-chrome-stable
-            sudo apt-get install google-chrome-stable
+            sudo apt-get install -f
+            sudo apt-get install libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libxss1 libglib2.0-0 libgtk-3-0 libasound2  
+            wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chrome-linux64.zip
+            unzip chrome-linux64.zip
+            sudo chmod +x chrome-linux64/chrome
+            sudo mv chrome-linux64/chrome /usr/local/bin/
+            /usr/local/bin/chrome --no-sandbox
             
-            wget https://storage.googleapis.com/chrome-for-testing-public/128.0.6613.113/linux64/chromedriver-linux64.zip
+            wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
             sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
             sudo chmod +x /usr/local/bin/chromedriver
