--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
             sudo chmod +x chrome-linux64/chrome
             sudo mv chrome-linux64/chrome /usr/local/bin/
             sudo apt-get install -f
+            sudo apt-get install libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libxss1 libglib2.0-0 libgtk-3-0 libasound2 libatk-bridge2.0-0 libxrandr2 libgbm1 libu2f-udev
             
             wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
