--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,14 +46,7 @@ jobs:
           name: Install ChromeDriver
           command: |
             sudo apt-get remove google-chrome-stable
-            wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chrome-linux64.zip
-            unzip chrome-linux64.zip
-            sudo chmod +x chrome-linux64/chrome
-            sudo mv chrome-linux64/chrome /usr/local/bin/
-            sudo apt-get install -f
-            sudo apt-get install libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libxss1 libglib2.0-0 libgtk-3-0 libasound2 libatk-bridge2.0-0 libxrandr2 libgbm1 libu2f-udev
-            rm -rf ~/.config/google-chrome/Default
-            /usr/local/bin/chrome --no-sandbox --remote-debugging-port=9222
+            sudo apt install google-chrome-127.0.6533.119
             
             wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
