--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,11 @@ jobs:
           name: Install ChromeDriver
           command: |
             sudo apt-get remove google-chrome-stable
-            sudo apt install google-chrome-127.0.6533.119
+            wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chrome-linux64.zip
+            unzip chrome-linux64.zip
+            sudo chmod +x chrome-linux64/chrome
+            sudo mv chrome-linux64/chrome /usr/local/bin/
+            sudo ln -s /usr/local/bin/chrome /usr/bin/google-chrome
             
             wget https://storage.googleapis.com/chrome-for-testing-public/127.0.6533.119/linux64/chromedriver-linux64.zip
             unzip chromedriver-linux64.zip
