--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ workflows:
       - test
       ### dev ###
       - build_and_push_dev_image
-          name: build-dev
+          name: build-development
           requires:
             - test
       ### staging ###
